2011-02-19 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-iio-provider.h:
	Define new reason when the level zero is not writable.

	* src/core/na-updater.c:
	* src/core/na-updater.h (na_updater_is_item_writable):
	Renamed as na_updater_check_item_writability_status.

	* src/nact/nact-main-window.c (setup_writability_status):
	* src/nact/nact-menubar-edit.c (get_deletables):
	* src/nact/nact-tree-model-dnd.c (is_parent_accept_new_children):
	Updated accordingly.

	* src/nact/base-assistant.c (class_init):
	Apply patch provided by Christian Kirback. Fix #640920.

2011-02-17 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-pivot.h:
	* src/core/na-pivot.c: Define new 'pivot-prop-loadable' property.

	* src/nact/base-window.h:
	* src/nact/base-window.c (class_init):
	Defines a new 'base-window-willing-to-quit' stop-with-accumulator signal.

	* src/nact/nact-main-window.c:
	Connect to the signal instead of implementing a virtual method.

2011-02-16 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-iduplicable.c (interface_base_init):
	* src/core/na-settings.c (class_init):
	* src/nact/base-window.c (class_init):
	Use G_SIGNAL_RUN_CLEANUP signal flag when an object handler is defined.

	* docs/reference/Makefile.am:
	* src/nact/Makefile.am:
	* run-distcheck.sh: Fix make distcheck.

	* docs/reference/Makefile.am:
	Do not documente NAGconfMonitor class when deprecated symbols are disabled.

	* src/api/na-data-boxed.h:
	* src/api/na-gconf-utils.h:
	* src/core/na-data-boxed.c:
	* src/core/na-iduplicable.c:
	* src/io-gconf/nagp-gconf-provider.c: Do not compile deprecated functions.

	* configure.ac:
	* m4/na-maintainer-mode.m4: Add --enable-deprecated configure option.

	* src/api/na-object-api.h (na_object_set_modified): Deprecated macro.

	* src/api/na-iduplicable.h:
	* src/core/na-iduplicable.c (na_iduplicable_set_modified):
	Deprecated function.

	* src/core/na-factory-object.c (na_factory_object_are_equal):